# IVMC: Ethereum Client-VM Connector API.
# Copyright 2019 The IVMC Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "example-rust-vm"
version = "10.0.0-alpha.1"
authors = ["Alex Beregszaszi <alex@rtfs.hu>", "Jake Lang <jak3lang@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "examplerustvm"
crate-type = ["staticlib", "cdylib"]

[dependencies]
ivmc-sys = { path = "../../bindings/rust/ivmc-sys" }
ivmc-vm = { path = "../../bindings/rust/ivmc-vm" }
ivmc-declare = { path = "../../bindings/rust/ivmc-declare" }
