# IVMC: Ethereum Client-VM Connector API.
# Copyright 2019 The IVMC Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "ivmc-declare-tests"
version = "10.0.0-alpha.1"
authors = ["Jake Lang <jak3lang@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/ILCOINDevelopmentTeam/ivmc"
description = "Bindings to IVMC (VM declare macro) -- Test crate"
edition = "2018"
publish = false

[dependencies]
ivmc-declare = { path = "../ivmc-declare" }
ivmc-sys = { path = "../ivmc-sys" }
ivmc-vm = { path = "../ivmc-vm" }
