# IVMC: Ethereum Client-VM Connector API.
# Copyright 2019 The IVMC Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "ivmc-declare"
version = "10.0.0-alpha.1"
authors = ["Jake Lang <jak3lang@gmail.com>", "Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ILCOINDevelopmentTeam/ivmc"
description = "Bindings to IVMC (VM declare macro)"
edition = "2018"

[dependencies]
quote = "1.0"
heck = "0.3.1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
# For documentation examples
ivmc-vm = { path = "../ivmc-vm", version = "10.0.0-alpha.1" }

[lib]
proc-macro = true
